alignment error resolved before 1st delivery

--- a/css/5th.css
+++ b/css/5th.css
@@ -63,6 +63,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    text-align: end;
 }
 .product_card table thead th h6{
     text-transform: uppercase !important;
